Kubernetes/AgrOne-Dev-Cluster/Ceph/ceph-s3-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ceph-s3-dev-ingress
  annotations:
    nginx.org/client-max-body-size: "1024m"
    nginx.ingress.kubernetes.io/proxy-body-size: "1024m"
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: rook-ceph
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - 'ceph-s3.prodata.local'
#        - 'agronewiki-dev.prodata.local'
      secretName: tls-secret-prodata-local
  rules:
  - host: ceph-s3.prodata.local
    http:
      paths:
      - backend:
          service:
            name: rook-ceph-rgw-ceph-objectstore
            port:
              number: 8080
        path: /
        pathType: Prefix
